adding functions
